--- a/angular.json
+++ b/angular.json
@@ -97,6 +97,9 @@
             "styles": [],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
